--- a/testes-srbarriga/pom.xml
+++ b/testes-srbarriga/pom.xml
@@ -60,6 +60,13 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <includes>
+              <include>br/jao/suites/*.java</include>
+            </includes>
+            <parallel>all</parallel>
+            <threadCount>6</threadCount>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
